Changelog
=========

0.6 (unreleased)
----------------

- Clean unicode data in local roles and workflow history
  [tom_gross]

- Respect fields added by schemaextender
  [tom_gross]

0.5 (23-08-2013)
----------------

- Fixed export of Blobs
  [tom_gross]

- Allow exporting of Plone sites not in ZODB root
  [tom_gross]

- Port xml.minidom to lxml
  [tom_gross]

- Plone 4.3 compatibilty

- Apply patch which fixes import of tarballs not available in Plone 4.2
  [tom_gross]

- Be more failsafe in pathological situations
  [tom_gross]

- Use regex to similarize xml in tests on Python 2.6 and 2.7
  [tom_gross]

0.4 (21-04-2011)
----------------

- Multiple path export support added to sitewalker
  [chervol]

- Collection criteria export added for catalog source
  [chervol]

- Simple transformation fallback added for straight forward type substitution 
  scenario, correspondent test updated 
  [chervol, kroman0]

- cmfns cleanup, local_roles override due to unicode errors
  [chervol]

- Allowed types acquisition case switch added
  [chervol]

- Yield items in manifest order from manifest importer section.
  [elro]

- Add an OrderedDict implementation.
  [elro]

- Walk the folder structure breadth first (sort of) in reader section.
  [elro]

- Set import context as an annotation on transmogrifier.
  [elro]

- In the marshaller sections, make sure the path is a string, as it
  fails on unicode (and paths should be ascii strings).
  Fixes http://plone.org/products/quintagroup.transmogrifier/issues/1
  [maurits]

- If you only want to export a part of the site, you can specify a
  start-path in the sitewalker section; use 'folder' to only export
  '/plonesite/folder'.
  [maurits]

- Only patch Generic Setup when Python is < 2.6. [elro]

- Add the _export_context to the item always so other section may use it even
  if there is no _files key. [elro]

- Add content type sniffing to the WriterSection. [elro]
